AH-2003-02-27-0    Bugfix:    overriding queue limits with job request limits 
                              is incomplete for OS architecture dependent 
                               resource limits (NEC)
                   Issu:      #503
                   Review     AS
                   Changed    sge_qmaster

EB-2003-02-17-0    Bugfix:    qhost -q -l arch=xx crashes if a grid execution
                              host is down
                   Issue:     #492
                   Bugtraq:   #4819479
                   Review:    JG
                   Changed:   qhost

AS-2002-10-07-0: CVS        Created V53p3_TAG --> SGE 5.3p3
-----------------------------------------------------------

EB-2003-02-14-1  Enhancem.: Enabled qmaster profiles code

JG-2003-02-14-0  Bugfix:    Second migration of tightly integrated jobs failed
                            if any host was used in both the first and second
                            run of the job.
                 Review:    AH
                 Changed:   sge_qmaster

EB-2003-02-14-0  Testsuite: new test which will find #226 
                 IZ:        #364

JG-2003-02-13-1  Enhancem.: Disabled use of non unique hashtable in scheduler.
                            It has negative performance impact on job sorting.
                 Changed:   sge_schedd

JG-2003-02-13-0  Bugfix:    Fixed improper use of hashtable in scheduler.
                 Enhancem.: Improved test program for the cull hash 
                            implementation.
                 Review:    EB
                 Changed:   sge_schedd

EB-2003-02-13-0  Enhancem.: Added PROFILE parameter to qmaster_params.
                            Addtional logging concerning spooling in qmaster.
                 Changed:   sge_qmaster 
                 Review:    AH
                 Note:      New code is not enabled per default!
                            Compile with: ./aimk -DPROFILE_MASTER 
